TyperChecker.sml - started reduce

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -861,6 +861,8 @@ Finally we add the expressions to the MIPS code generator
 	
 \subsubsection{reduce}
 
+\subsection{Task 3}
+
 \section{Results}
 \section{Conclusion}
 
